fixed z-index

--- a/Kasa/static/css/main.css
+++ b/Kasa/static/css/main.css
@@ -572,7 +572,7 @@ input[type=text]:focus {
 .background-footer {
     position: relative;
     bottom: 500px;
-    z-index: 100;
+    z-index: -100;
     width: 100%;
     height: 440px;
     background-repeat: no-repeat;
